<resources>
    <string name="app_name">AlphaFitness</string>
    <string name="title_activity_record_workout">ALPHA_FITNESS</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="landscape_workoutDetails">Workout Details</string>

    <string name="avg_speed">AVG</string>
    <string name="max_speed">Max</string>
    <string name="min_speed">Min</string>
    <string name="avg_speed_value">0</string>
    <string name="max_speed_value">0</string>
    <string name="min_speed_value">0</string>
    <string name="user_name">Peter</string>
    <string name="speed_unit">min/m</string>
    <string name="portrait_record_workout">Record Workout</string>
    <string name="permission_notice">Please note that your location permission is important if you want to draw your route on map while walking or running</string>
    <string name="permission_title">Location Permission Denied</string>
    <string name="cancel_permission_notice">Wow, please come back again when you need it and grant the permission</string>
    <string name="start_tracking">Start Workout</string>
    <string name="route_distance">Distance</string>
    <string name="distance_unit">km</string>
    <string name="time_unit">min</string>
    <string name="times_unit">Times</string>
    <string name="calories_unit">cal</string>
    <string name="weekly_workout_time">0</string>
    <string name="weekly_distance_value">0</string>
    <string name="route_distance_value">0 m</string>
    <string name="route_duration">Duration</string>
    <string name="route_duration_value">0 mins</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="google_android_map_api_key"> AIzaSyBdVJpcFte8QvolxB0W44riAWjWfdmzG5Q </string>
</resources>
