<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.wearable.alphafitness.LandScapeRecordWorkout">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
                <TextView
                    android:layout_width="104dp"
                    android:layout_height="match_parent"
                    android:textSize="20sp"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/landscape_workoutDetails"
                    android:paddingTop="8dp"
                    android:paddingLeft="16dp"
                    android:gravity="center_vertical|fill_vertical" />
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal">
                    <TextView
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:textStyle="bold"
                      android:textSize="12sp"
                      android:textColor="@color/colorPrimaryText"
                      android:text="@string/avg_speed"
                        android:gravity="top" />
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">
                            <TextView
                              android:id="@+id/avgSpd_value"
                              android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:textSize="10sp"
                              android:layout_marginTop="1dp"
                              android:textColor="@color/colorAccent"
                              android:text="@string/avg_speed_value" />
                            <TextView
                              android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:textSize="10sp"
                              android:layout_marginTop="1dp"
                              android:textColor="@color/colorAccent"
                              android:text="@string/speed_unit"/>
                        </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:textSize="12sp"
                            android:textColor="@color/colorPrimaryText"
                            android:text="@string/max_speed"/>
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">
                                <TextView
                                    android:id="@+id/maxSpd_value"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textSize="10sp"
                                    android:layout_marginTop="1dp"
                                    android:textColor="@color/colorAccent"
                                    android:text="@string/max_speed_value"/>
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textSize="10sp"
                                    android:layout_marginTop="1dp"
                                    android:textColor="@color/colorAccent"
                                    android:text="@string/speed_unit"/>
                        </LinearLayout>
                    </LinearLayout>>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="horizontal">
                       <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="12sp"
                        android:textColor="@color/colorPrimaryText"
                        android:text="@string/min_speed"/>
                        <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/minSpd_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="10sp"
                            android:layout_marginTop="1dp"
                            android:textColor="@color/colorAccent"
                            android:text="@string/min_speed_value"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="10sp"
                            android:layout_marginTop="1dp"
                            android:textColor="@color/colorAccent"
                            android:text="@string/speed_unit"/>
                        </LinearLayout>
                    </LinearLayout>



        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:orientation="horizontal">
            <com.github.mikephil.charting.charts.ScatterChart
                android:id="@+id/workoutchart"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

</LinearLayout>